# jwsh

./: Cargo.toml  README.md  install.sh  kota.json
.github/workflows/: ci.yml  release.yml
src/: api.rs  cli.rs  helper.rs  lib.rs  main.rs  models.rs  ui.rs
