[package]
name = "jwsh"
version = "0.1.0"
edition = "2024"
authors = ["Pakelz <wpachmad@gmail.com>"]
description = "CLI untuk menampilkan jadwal sholat dari API MyQuran"
license = "MIT"
repository = "https://github.com/Pakelz/jwsh"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable = "0.10"
chrono = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
